# integral-optimization

./: .clang-format  .gitignore  CMakeLists.txt  README.md  chm_task2.tex  main.cpp
conductor/: refactor-integral-optimization.md
include/: math_constants.h  ode_solver.h  shooting_method.h  system_state.h
src/: main.cpp  math_constants.h  ode_solver.cc  ode_solver.h  shooting_method.cc  shooting_method.h  system_state.cc  system_state.h
tests/: baseline_test.cc  ode_solver_test.cc  shooting_method_test.cc  system_state_test.cc
